--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "zayla-bot",
   "version": "1.1.0",
-  "description": "WhatsApp chatbot Zayla‑Bot yang dibuat khusus untuk anda,wk powered by ZAI Lab",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.17.0",
+    "@whiskeysockets/baileys": "^6.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.0.3",
     "ytdl-core": "^4.11.4"
   }
 }
