--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@whiskeysockets/baileys": "^6.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.1",
     "ytdl-core": "^4.11.4"
   }
 }
