--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "zayla-bot",
   "version": "1.1.0",
+  "description": "WhatsApp bot Zayla Dibuat dengan ONE EYES LAB by ZAILab",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
